public/css/theme.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");

:root {
    /* Colors Theme */
    --light: #eeeeff;
    --iron: #ced1d6;
    --ghost: #c7cbd4;
    --gray-chateau: #767d89;
    --raven: #767d89;
    --bright-gray: #3c4452;
    --mirage: #1a202c;
    --vulcan: #10151e;
    --vulcan-fade: rgba(16, 21, 30, 0.8);

    --astro-blue: #01435a;
    --cerulean: #00bfff;
    --onahau: #bdeeff;
    --crimson: #de1533;

    /* Font Theme */
    --font: "Poppins", sans-serif;
    --font-thin: 100;
    --font-xlight: 200;
    --font-light: 300;
    --font-medium: 500;
    --font-sbold: 600;
    --font-bold: 700;
    --font-xbold: 800;
    --font-black: 900;
    --font-decoration: none;
    --font-baby: 0.6rem;
    --font-kid: 0.9rem;
    --font-xkid: 1.1rem;
    --font-teen: 1.3rem;
    --font-younger: 1.65rem;
    --font-guy: 1.8rem;
    --font-adult: 2rem;
    --font-xadult: 2.5rem;
    --font-big-guy: 3rem;
    --font-truck: 4rem;
    --font-xtruck: 5.6rem;

    /* Box Shadow */
    --box-shadow: 0 0 0.8rem var(--astro-blue);
}

*:not(i) {
    font-family: "Poppins", sans-serif !important;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard */
}

html {
    /* font-size: 62.5%; */
    overflow-x: hidden;
}

/* body,
.bg-base {
    background-color: var(--mirage) !important;
    color: var(--ghost) !important;
} */

body {
    overflow: hidden !important;
}

.container-fluid {
    padding: 0 1rem;
}

section {
    background-color: inherit;
    min-height: 100vh;
    padding: 10rem 7% 2rem !important;
    overflow: hidden !important;
}

input::placeholder {
    color: var(--ghost) !important;
}

a {
    text-decoration: var(--font-decoration) !important;
}

h2,
h3,
h4,
h5 {
    text-transform: capitalize !important;
    cursor: pointer;
}

p:not(a) {
    font-size: 1rem !important;
    cursor: pointer;
}

.btn {
    display: inline-block !important;
    padding: 0.9rem 2rem !important;
    background: transparent !important;
    border-radius: 4rem !important;
    box-shadow: var(--box-shadow) !important;
    color: var(--cerulean) !important;
    font-size: 0.95rem !important;
    letter-spacing: 0.1rem !important;
    font-weight: 600 !important;
    transition: 0.5s ease !important;
}

.btn:hover {
    background: var(--cerulean) !important;
    color: var(--mirage) !important;
}

.card {
    background: var(--vulcan);
    box-shadow: var(--box-shadow);
    color: var(--ghost);
}

.text-muted {
    color: var(--raven) !important;
}

